FIX: Lists are not formatting the same
I want all the lists to look like the ingredients list (line 27)
Other lists are not looking the same.
All unordered lists have the same class.

--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -1,11 +1,47 @@
 body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: beige;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background-color: beige;
 }
 
 img {
-    display: block;
-    margin: auto;
-    width: 20%;
-    height: auto;
+  display: block;
+  margin: 50px auto;
+  width: 500px;
+  height: auto;
+}
+
+h1 {
+  text-align: center;
+  font-size: 6rem;
+}
+
+.description,
+.ingredients,
+.instructions {
+  font-size: 2rem;
+}
+
+.instructions,
+.ingredients {
+  text-align: center;
+  border: 3px solid black;
+  margin: 10px;
+}
+
+.unordered_list,
+.instructions ol {
+  display: inline-block;
+  text-align: left;
+}
+
+.unordered_list {
+    padding-left: 5%;
+}
+
+.instructions p,
+.ingredients p {
+  text-align: left;
+  margin-left: 10%;
+  font-size: 3rem;
+  font-weight: 400;
 }
